--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .idea/*
-
+reports/*
+reposrts/*
+jacoco.exec
 # Created by .ignore support plugin (hsz.mobi)
 .idea/**/workspace.xml
 .idea/**/tasks.xml
